# flex-player

./: .dockerignore  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  Dockerfile.test  README.md  change_listview_to_repeater.py  fix_race_test2.py  fix_test_nam.py  force_reset_v5.py  io.github.danilovsergei.flex-player.desktop  io.github.danilovsergei.flex-player.json  io.github.danilovsergei.flex-player.metainfo.xml  org.flexplayer.FlexPlayer.desktop  org.flexplayer.FlexPlayer.json  org.flexplayer.FlexPlayer.metainfo.xml  rewrite_test.py  run_ui_tests.sh  update_playback_test_init.py
.github/workflows/: flatpak.yml
flatpak/patches/: mpvqt-flatpak-fixes.patch
src/: AppConfig.qml  CollectionMoviesView.qml  DetailsCastList.qml  DetailsCastList.qml.backup.1784608698  DetailsCastList.qml.backup.1784608827  DetailsCastList.qml.backup.1784609053  GlobalController.qml  HomeView.qml  LibraryRail.qml  LibraryRail.qml.backup.1784659722  LibraryRecommendView.qml  Main.qml  MovieDetailsView.qml  MoviePosterDelegate.qml  MoviePosterDelegate.qml.backup.1784660406  MpvItem.cpp  MpvItem.h  MpvItem.h.backup.1784660393  PlayerView.qml  PlayerView.qml.backup.1784615160  PlayerView.qml.backup.1784658789  PlexAuth.cpp  PlexAuth.cpp.backup.1784670810  PlexAuth.cpp.backup.1784697514  PlexAuth.cpp.backup.1784698690  PlexAuth.h  PlexAuth.h.backup.1784613864  PlexAuth.h.backup.1784614081  PlexAuth.h.backup.1784670782  PlexConnectionManager.cpp  PlexConnectionManager.cpp.backup.1784698064  PlexConnectionManager.cpp.backup.1784700497  PlexConnectionManager.cpp.backup.1784701037  PlexConnectionManager.h  PlexConnectionManager.h.backup.1784697796  PlexModel.cpp  PlexModel.cpp.backup.1784701349  PlexModel.h  PlexModel.h.backup.1784674398  ScreenSaverInhibitor.cpp  (+25 more)
tests/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SignalSpy.qml  buffering_test.qml  cmake_install.cmake  docker_entrypoint.sh  docker_entrypoint.sh.backup.1784658483  dummy1.mkv  dummy2.mkv  dummy3.mkv  hdr_toggle_test.qml  hdr_toggle_test.qml.backup.1784602298  header.qml  lua_out.txt  lua_out2.txt  main_test.cpp  main_test.cpp.backup.1784701341  mock_cert.pem  mock_key.pem  mock_server.py  rest.qml  run_headless_suite.sh  run_headless_suite.sh.backup.1784649507  run_headless_suite.sh.backup.1784650315  run_headless_suite.sh.backup.1784700965  run_headless_suite.sh.backup.1784836428  run_phys_suite.sh  run_virt_wayland.sh  test_cmake.txt  test_dlopen  test_dlopen.cpp  test_fps  test_fps.cpp  test_hwdec  test_hwdec.cpp  test_load_script  test_mpv_config  test_mpv_config.cpp  (+36 more)
tests/.qt/: QtDeploySupport.cmake
tests/phys/: CMakeLists.txt  test_load_script.cpp  test_mpv_node.cpp  test_mpv_start.cpp  test_vaapi.cpp  test_wayland_display.cpp  test_wayland_display2  tst_real_connection.qml
